--- a/backend/django_app/.env.development
+++ b/backend/django_app/.env.development
@@ -11,7 +11,7 @@ DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 
 # CORS
-DJANGO_CORS_ALLOWED_ORIGINS=http://0.0.0.0:9000,http://localhost:3000⁠,
+DJANGO_CORS_ALLOWED_ORIGINS=http://0.0.0.0:9000,http://localhost:3000,http://127.0.0.1:3000,http://127.0.0.1:9000
 DJANGO_CORS_ALLOW_ALL_ORIGINS=True
 
 # DB (PostgreSQL 등 확장 가능 시나리오)
